<resources>

    <!--Strings related to entire application-->
    <string name="app_name">sdc-test-game-app</string>

    <!-- Strings related to login -->
    <string name="login_hint_input_username">Email or Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_create_account_text">No account yet? <u>Create one</u></string>
    <string name="login_progress_text">Loggin in...</string>
    <string name="login_incorrect_username">Username is incorrect</string>
    <string name="login_incorrect_password">Password is incorrect</string>
    <!--Strings related to create account-->
    <string name="create_invalid_email">Email or Username is invalid</string>
    <string name="create_invalid_password">Invalid Password</string>
    <string name="create_account_hint_first_name">First Name</string>
    <string name="create_account_hint_last_name">Last Name</string>
    <string name="create_account_hint_username">Username</string>
    <string name="create_account_button_name">Create Account</string>


    <!--Strings related to select categories-->
    <string name="random">Random</string>
    <string name="science">Science</string>
    <string name="math">Math</string>
    <string name="etc">ETC</string>
    <string name="categories">Categories</string>

</resources>
