<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:gravity="center" android:layout_centerHorizontal="true" android:layout_gravity="center" >

    <!--Text heading Categories-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <!--Button Random-->
    <Button
        android:id="@+id/butnRand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/random" />

    <!--Button Science-->
    <Button
        android:id="@+id/butnSci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/science" />

    <!--Button Math-->
    <Button
        android:id="@+id/butnMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/math" />

    <!--Button Etc-->
    <Button
        android:id="@+id/butnEtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/etc" />
</LinearLayout>