<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.sdc.ttu.sdc_test_game_app.Login.LoginActivity">


<LinearLayout
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--For the App's Logo-->
    <ImageView
        android:src="@mipmap/ic_temp_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content" />

    <!--Email or Username input-->
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/login_hint_input_username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/input_username"/>
    </android.support.design.widget.TextInputLayout>

    <!--Password Input-->
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/input_password"/>
    </android.support.design.widget.TextInputLayout>

    <!--Login Button-->
    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"/>

    <!--Sign Up Link-->
    <TextView
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:id="@+id/text_create_account"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/login_create_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

</ScrollView>
